--- a/style.css
+++ b/style.css
@@ -229,3 +229,45 @@ header
     right: 20px;
     color: white;
 }
+/*cta section*/
+.cta-section{
+    padding: 120px var(--padding-inline-section) 80px;
+    background-color: #183b54;
+    margin-top: 25px;
+}
+.cta-container{
+    flex-direction: column;
+    gap:30px;
+    color: white;
+}
+.cta-section p{
+    margin-top: 20px;
+    color: white;
+    
+}
+/*footer*/
+footer{
+    padding-block:80px;
+    background-color: #ebf2fa;
+}
+.link-columns
+{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 17px;
+    /* justify-content: space-between; */
+}
+.footer-container{
+    align-items: flex-start;
+    justify-content: space-between;
+}
+/*sub-footer*/
+.sub-footer{
+background-color: #7892b1;
+padding: var(--padding-inline-section);
+}
+.subfooter-container{
+    justify-content: center;
+    gap:30px;
+    
+}
